@@ -541,6 +541,11 @@ SpecTcl 3.2-pre1 starts.
                  Expose ability to get the histogrammer etc. in SpecTcl.h
                  Expose fit id allocation in CfitCommand.
                  Added credits for gsl.{cpp,h} and permission grant to the
-                 distribution
  November 1, 2006 - Fix some issues for building from the distro rather than
                  from CVS.
+                 distribution
+ Nov  2, 2006  - Get the calibrated parameter contrib install to stop polluting
+                 $(prefix)/include with its headers.
+               - Fix wierd issues with make dist on ubuntu edgy edge...
+                 was not putting config dir into the distro.=======
+                 distribution
